# Upscale

./: README.md  pyproject.toml  requirements.txt
src/: app.py
